<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dip"
    android:weightSum="1">
    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/high_title"
        android:text="@string/high_title"
        android:layout_marginTop="20sp"
        android:textSize="48sp"
        android:textAlignment="center"
        />

    <!-- Table Title -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="left"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:id="@+id/hiscore0n"
            android:text="@string/high_name"
            android:layout_marginTop="0sp"
            android:textSize="24sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0.45"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:id="@+id/hiscore0v"
            android:text="@string/high_score"
            android:layout_marginTop="0sp"
            android:textSize="24sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0.08"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:id="@+id/hiscore0l"
            android:text="@string/high_line"
            android:layout_marginTop="0sp"
            android:textSize="24sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />
    </LinearLayout>

    <!-- Hiscore 1 -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="left"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:id="@+id/hiscore1n"
            android:text="No One"
            android:layout_marginTop="0sp"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0.11"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:id="@+id/hiscore1v"
            android:text="0"
            android:layout_marginTop="0sp"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0.08"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:id="@+id/hiscore1l"
            android:text="0"
            android:layout_marginTop="0sp"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0.06"
            />
    </LinearLayout>

    <!-- Highscore 2 -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="left"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:id="@+id/hiscore2n"
            android:text="No One"
            android:layout_marginTop="0sp"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0.11"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:id="@+id/hiscore2v"
            android:text="0"
            android:layout_marginTop="0sp"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0.08"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:id="@+id/hiscore2l"
            android:text="0"
            android:layout_marginTop="0sp"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0.06"
            />
    </LinearLayout>

    <!-- Highscore 3 -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="left"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:id="@+id/hiscore3n"
            android:text="No One"
            android:layout_marginTop="0sp"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0.11"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:id="@+id/hiscore3v"
            android:text="0"
            android:layout_marginTop="0sp"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0.08"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:id="@+id/hiscore3l"
            android:text="0"
            android:layout_marginTop="0sp"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0.06"
            />
    </LinearLayout>
    <!-- Lower buttons -->
    <Button
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:textSize="24sp"
        android:id="@+id/high_reset"
        android:layout_gravity="center_horizontal"
        android:longClickable="false"
        android:layout_below="@+id/Title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>
    <Button
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="24sp"
        android:id="@+id/high_back"
        android:layout_gravity="center_horizontal"
        android:longClickable="false"
        android:layout_below="@+id/Title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"/>
</LinearLayout>